# alphabet

./: .clang-format  .clang-tidy  .gitignore  .ide-state.json  ALPHABET_DOCUMENTATION.md  ALPHABET_PRESENTATION.md  AUDIT_REPORT.md  CHANGELOG.md  CMakeLists.txt  CMakeListsWasm.txt  CMakeListsWasmLsp.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  QUICK_REFERENCE.md  README.md  REPL_AUDIT.md  SECURITY.md  TEST_RESULTS.md  abstract.abc  alphabet.1  alphabet.py  alphabet.toml  amharic.abc  benchmark.py  build-wasm-lsp.sh  build-wasm.sh  calculator.abc  exhaustive_test.sh  fix.cpp  fix.py  fix_identifier.py  fraol163-alphabet-8a5edab282632443.txt  hello.abc  install.ps1  install.sh  pyproject.toml  setup.py  setup_dist.sh  (+6 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  docker-publish.yml  nightly.yml  release.yml  vscode-extension-release.yml
.planning/codebase/: ARCHITECTURE.md  STRUCTURE.md
completions/: alphabet.bash  alphabet.fish  alphabet.zsh
docs/: ADVANCED.md  ANALYTICS_PLAN.md  API_DESIGN_REVIEW.md  BACKWARD_COMPAT.md  BENCHMARKS.md  BOOK_COURSE_OUTLINE.md  BUSINESS_MODEL.md  CODE_STYLE_GUIDE.md  COMPETITIVE_ANALYSIS.md  COMPLETE_GUIDE.md  COMPLIANCE_REPORT.md  CONFERENCE_TALKS.md  CONTENT_MARKETING.md  DOCS_SITE_PLAN.md  DOCUMENTATION.md  GETTING_STARTED.md  GRAMMAR.md  GROWTH_STRATEGY.md  INSTALLATION.md  PRESENTATION.md  PROJECT_SUMMARY.md  REFERENCE.md  RELEASE_PROCESS.md  REMAINING_ITEMS.md  ROADMAP.md  ROADMAP_PUBLIC.md  SOCIAL_MEDIA.md  SPEC.md  TESTIMONIALS.md  THREADING_DESIGN.md  TUTORIAL.md  UNIVERSITY_PARTNERSHIP.md  USER_RESEARCH.md  VERSIONING.md  VIDEO_TUTORIALS.md  VSCODE-EXTENSION-PHASE1-AUDIT.md  WASM_DESIGN.md  error-messages-i18n.md
editor/: alphabet.tmLanguage.json  alphabet.vim
editors/vscode-alphabet/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  esbuild.config.mjs  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode-alphabet/build-tools/wasm-lsp/: CMakeLists.txt
examples/: 01_hello.abc  02_collections.abc  03_exceptions.abc  04_statics.abc  amharic.abc  ascii_art.abc  benchmarking.abc  caesar_cipher.abc  calculator.abc  classes.abc  cli_tool.abc  comprehensive.abc  data_processing.abc  design_patterns.abc  embed_example.cpp  error_handling.abc  fibonacci.abc  file_io.abc  functional.abc  guessing_game.abc  hello_shebang.abc  json.abc  lib_greeter.abc  lib_math.abc  matrix.abc  networking.abc  pattern_matching.abc  recursion.abc  sorting.abc  state_machine.abc  test_break.abc  test_continue.abc  test_escapes.abc  test_import.abc  test_import_class.abc  test_stdlib.abc  text_adventure.abc  unit_testing.abc  web_api.abc
learn/: tour.abc  voice_tutorial.abc
learning/: index.md
learning/01_hello_world/: exercise.abc  lesson.md  solution.abc
learning/02_variables/: exercise.abc  expected.txt  lesson.md  solution.abc
learning/03_basic_math/: exercise.abc  lesson.md  solution.abc
learning/04_conditionals/: exercise.abc  lesson.md  solution.abc
learning/05_loops/: exercise.abc  lesson.md  solution.abc
learning/06_functions/: exercise.abc  lesson.md  solution.abc
learning/07_lists/: exercise.abc  lesson.md  solution.abc
learning/08_classes/: exercise.abc  expected.txt  lesson.md  solution.abc
learning/09_error_handling/: exercise.abc  expected.txt  lesson.md  solution.abc
learning/10_project_calculator/: exercise.abc  lesson.md  solution.abc
packaging/aur/: PKGBUILD
packaging/homebrew/: alphabet.rb
packaging/snap/: snapcraft.yaml
playground/: alphabet-wasm.js  alphabet.js  alphabet.wasm  index.html
src/: alphabet_ast.py  alphabet_embed.cpp  bytecode.py  bytecode_io.cpp  compiler.cpp  compiler.py  ffi.cpp  lexer.cpp  lexer.py  linter.cpp  lsp.cpp  lsp.py  main.cpp  main.py  nl_to_code.cpp  parser.cpp  parser.py  project.cpp  type_system.cpp  vm.cpp  vm.py  vm_builtins.cpp  voice.cpp  wasm_lsp_main.cpp  wasm_main.cpp
src/include/: alphabet_ast.h  alphabet_embed.h  bytecode.h  compiler.cpp  compiler.h  error_catalog.h  ffi.cpp  ffi.h  keywords.h  lexer.cpp  lexer.h  linter.h  lsp.cpp  lsp.h  nl_to_code.h  parser.cpp  parser.h  project.h  trace_utils.h  type_system.cpp  type_system.h  version.h.in  vm.cpp  vm.h  vm_builtins.cpp  voice.h
stdlib/: assert.abc  collections.abc  config.abc  crypto.abc  data_structures.abc  datetime.abc  functional.abc  io.abc  json.abc  list.abc  list_utils.abc  math.abc  math_ext.abc  os.abc  random.abc  string.abc  string_utils.abc  system.abc  testing.abc  validate.abc
stdlib/am/: math.abc
stdlib/de/: math.abc
stdlib/es/: math.abc
stdlib/fr/: math.abc
tests/: comprehensive.abc  golden_test_runner.sh  test_helpers.h  test_lexer.cpp  test_parser.cpp  test_stdlib.abc  test_vm.cpp
tests/edge_cases/: 01_arith_overflow.abc  02_arith_underflow.abc  03_arith_div_zero.abc  04_arith_mod_zero.abc  05_arith_neg_mod.abc  06_arith_float_precision.abc  07_arith_large_mul.abc  08_arith_neg_div.abc  09_arith_zero.abc  10_arith_precedence.abc  11_str_empty.abc  12_str_long.abc  13_str_unicode.abc  14_str_escape_newline.abc  15_str_escape_tab.abc  16_str_escape_backslash.abc  17_str_concat_chain.abc  18_str_repeat.abc  19_str_empty_repeat.abc  20_str_spaces.abc  21_list_empty.abc  22_list_single.abc  23_list_nested.abc  24_list_long.abc  25_list_of_lists.abc  26_list_oob.abc  27_list_neg_index.abc  28_list_append.abc  29_list_sort.abc  30_list_reverse.abc  31_map_empty.abc  32_map_nested.abc  33_map_null_val.abc  34_map_keys.abc  35_map_nonexist.abc  36_map_overwrite.abc  37_map_keys_fn.abc  38_map_has.abc  39_map_mixed.abc  40_map_large.abc  (+31 more)
tests/golden_files/: arithmetic.abc  arithmetic_am.abc  arithmetic_de.abc  arithmetic_es.abc  arithmetic_fr.abc  arithmetic_fr.expected  class_method.abc  class_method_am.abc  class_method_de.abc  class_method_es.abc  class_method_fr.abc  dump_bytecode.abc  (+34 more)
tools/: abc_lint.sh  voice_server.py
vscode-extension/: language-configuration.json  package.json
webide/: fs.js  index.html  interpreter.js  package.json
(+167 files in other folders)
